--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ts-loader": "^9.5.1"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.73",
