--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/wordpress__blocks": "^12.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dompurify": "^3.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.3"
