--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
     "@types/wordpress__block-editor": "^11.5.13",
-    "@wordpress/scripts": "^23.3.0",
     "browser-sync": "^2.27.10",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.1.4",
@@ -28,11 +27,15 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
     "@types/wordpress__blocks": "^12.5.13",
+    "@wordpress/data": "^9.27.0",
+    "@wordpress/scripts": "^27.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dompurify": "^3.1.0",
