--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
+    "@types/dompurify": "^3.0.5",
     "@types/wordpress__block-editor": "^11.5.13",
     "browser-sync": "^2.27.10",
     "npm-run-all": "^4.1.5",
@@ -38,7 +39,7 @@
     "@wordpress/scripts": "^27.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "dompurify": "^3.1.0",
+    "dompurify": "^3.1.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.3"
